--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,3 +11,17 @@ main {
   justify-content: center;
   align-items: center;
 }
+
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 40vmin;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
